crates/entangle-derive/tests/ui/fail_string_field.rs
use entangle::prelude::*;

#[derive(ZeroCopySafe)]
#[repr(C)]
struct HasString {
    name: String,
}
fn main() {}
